# goit-ds-hw-01

Z_1/: pyproject.toml
Z_2/: Dockerfile  pyproject.toml
