[tool.poetry]
name = "my-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
datetime = "^5.5"
timedelta = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
